welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: not found: value nums
    if (nums(i+1)>nums(i)){
        ^island:4: error: not found: value nums
    if (nums(i+1)>nums(i)){
                  ^